Sigil-1.1.0
    New Features:
      - Added Support for Dark Mode for Windows, Linux and macOSX (Thanks BeckyEbook!)
      - Added new icons that work well under both Light and Dark modes (Thanks BeckyEbook)
      - Added ability to use Dark Mode for Preview (controlled by Preferences)
      - Added Zoom Keys Ctrl +/- support to the Inspector (for improved Accessibility)
      - Added support for a second Clip bar with up to 20 additional clips
      - Select Special Character Dialog now support scrollbars
      - Guide and Nav titles are now translated into ebook language (if translations available)
      - All Report Names have been shortened to allow larger font sizes for better Accessibility
      - Added improved contrast icons (Thank you BeckyEbook!)
      - Completely reworked all Sigil Preference Dialogs to make them more screen/user friendly
      - Improve High DPI Preference Settings for Windows users
      - Clips from the Clips QDockwidget window can now be used in CSS Tabs as well.
      - The plugin interface has been extended to show current colorMode and primary colors
      
    Bug Fixes:
      - Replaced deprecated QSignalMapper code with QActionGroups throughout Sigil's code base
      - Fixed bug in "open-with" on macOSX that did not allow .app files to be selected
      - Soft hyphens characters are now handled properly by Spellchecking [PR from BeckyEbook]
      - Fixed bug in 'split at cursor" that created extra empty pages
      - Fix bug in Insert Files from Disk
      - Fixed same thread re-entrancy issues with tab creation / deletion code due to Qt signal/slot handling
      - Fixed source code typos [PR from luzpaz]
      - Fixed incorrect number of "times used" in Image Reports
      - Fixed plugin font_iter() code to properly handle new Iana.org font media types
      - Broken links are no longer changed during ImportHTML (Add Existing...) operations